# InvoiceAutomation

./: README.md
InvoiceCoreProcessor/: .env  .env.example  .gitignore  README.md  main_processor.py  pyproject.toml  requirements.txt  start-services.ps1  start-services.sh
InvoiceCoreProcessor/config/: settings.py
InvoiceCoreProcessor/core/: agent_registry.py  database.py  integration_agent.py  mcp_clients.py  workflow.py
InvoiceCoreProcessor/docs/: API_DOCUMENTATION.md  HIGH_LEVEL_DOCUMENTATION.md  TECHNICAL_DOCUMENTATION.md  agents.md  api.md  architecture.md  db_schema.md
InvoiceCoreProcessor/microservices/ingestion/: main.py
InvoiceCoreProcessor/prompts/: schema.py
InvoiceCoreProcessor/servers/: agent_server.py  database_server.py  mapper_server.py  ocr_server.py
InvoiceCoreProcessor/services/: ingestion.py  mapping.py  ocr_processor.py  validation.py
InvoiceCoreProcessor/src/invoice_core_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
InvoiceCoreProcessor/src/invoice_core_processor/config/: accounting_schemas.py  logging_config.py  settings.py
InvoiceCoreProcessor/src/invoice_core_processor/core/: agent_registry.py  database.py  integration_agent.py  mcp_clients.py  models.py  workflow.py
InvoiceCoreProcessor/src/invoice_core_processor/database/: schema.sql  seed_rules.py
InvoiceCoreProcessor/src/invoice_core_processor/prompts/: gpt_vision_model.py  schema.py  (+3 more)
InvoiceCoreProcessor/tests/: test_datastore_agent.py  test_metrics_agent.py  test_ocr_agent.py  test_summary_agent.py  test_validation_agent.py  test_workflow.py
(+12 files in other folders)
